--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "babel-register": "^6.26.0",
+    "body-parser": "^1.20.2",
     "express": "^4.18.2"
   },
   "devDependencies": {
