--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "babel-register": "^6.26.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "promise-mysql": "^5.2.0"
+    "promise-mysql": "^5.2.0",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
